Spring Boot 3 implementation